--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ baseurl: /
 domain_name: 'http://robertrichards.me'
 google_analytics: 'UA-82195434-1'
 gems: [jekyll-paginate]
+disqus_shortname: robertrichards-me
 
 # Details for the RSS feed generator
 url:            'http://robertrichards.me'
