--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,16 @@ paginate: 6
 baseurl: /
 domain_name: 'http://robertrichards.me'
 google_analytics: 'UA-82195434-1'
-gems: [jekyll-paginate]
+gems: 
+    - jekyll-paginate
+    - jekyll-mentions
+    - jekyll-sitemap
 
 # Details for the RSS feed generator
 url:            'http://robertrichards.me'
 author:         'Robert J. Richards'
+
+
+
+jekyll-mentions:
+  base_url: https://twitter.com
