added sitemap and some seo meta info

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ gems:
     - jekyll-paginate
     - jekyll-mentions
     - jekyll-sitemap
+    - jekyll-seo-tag
 
 # Details for the RSS feed generator
 url:            'http://robertrichards.me'
