--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ markdown: kramdown
 highlighter: Rouge
 logo: false
 paginate: 6
-baseurl: /
+baseurl: 
 domain_name: 'http://robertrichards.me'
 google_analytics: 'UA-82195434-1'
 gems: 
